tests/errors/runtime/E010_reexport_private.zy
<# ../semantic/E010_reexport_private <= m

>> m::secret_fn() ¶
